src/objects/EmployeeAvailability__c.object
<CustomObject>
    <fields>
        <fullName>SaturdayStart1__c</fullName>
        <label>Saturday Start.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SaturdayStart__c</fullName>
        <label>Saturday Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Availability start date</description>
        <inlineHelpText>Enter the start data for this availability record</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SundayEnd1__c</fullName>
        <label>Sunday End.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SundayEnd__c</fullName>
        <inlineHelpText>Please enter information in 24 hour time eg 17:30 = 5:30pm</inlineHelpText>
        <label>Sunday End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SundayStart1__c</fullName>
        <label>Sunday Start.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SundayStart__c</fullName>
        <inlineHelpText>Please enter information in 24 hour time eg 17:30 = 5:30pm</inlineHelpText>
        <label>Sunday Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThursdayEnd1__c</fullName>
        <label>Thursday End.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThursdayEnd__c</fullName>
        <label>Thursday End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThursdayStart1__c</fullName>
        <label>Thursday Start.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThursdayStart__c</fullName>
        <label>Thursday Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TuesdayEnd1__c</fullName>
        <label>Tuesday End.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>